# text_similarity

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/models/: similarity_score.py
app/routers/: similarity.py
app/services/: levenshtein.py  levenshtein_service.py  similarity_service.py
src/model/: string_pair.py
src/models/: string_pair.py
src/routers/: similarity.py
src/score/: levenshtein.py  normalize.py
src/utils/: matrix.py
tests/: test_levenshtein.py  test_levenshtein_service.py  test_string_pair.py
